--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,8 @@ allPosts = allPosts.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(
   <head>
     <BaseHead title={title} description={description} permalink={permalink} />
     <link rel="stylesheet" href="/blog.css" />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+    ></script>
 
     <style>
       body {
@@ -86,5 +88,18 @@ allPosts = allPosts.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(
         </section>
       </main>
     </div>
+    <footer>
+      <script>
+        if (window.netlifyIdentity) {
+          window.netlifyIdentity.on('init', (user) => {
+            if (!user) {
+              window.netlifyIdentity.on('login', () => {
+                document.location.href = '/admin/';
+              });
+            }
+          });
+        }
+      </script>
+    </footer>
   </body>
 </html>
