--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,33 +1,17 @@
 ---
 // Component Imports
 import BaseHead from '../components/BaseHead.astro';
-import BlogHeader from '../components/BlogHeader.astro';
-import BlogPostPreview from '../components/BlogPostPreview.astro';
 
-interface MarkdownFrontmatter {
-  publishDate: number;
-}
-
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
-let title = 'Example Blog';
-let description = 'The perfect starter for your perfect blog.';
-let permalink = 'https://example.com/';
-
-// Data Fetching: List all Markdown posts in the repo.
-
-let allPosts = Astro.fetchContent<MarkdownFrontmatter>('./posts/*.md');
-allPosts = allPosts.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(a.publishDate).valueOf());
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
+let title = 'Login Page';
+let description = 'Authenticate to have access to other sections of the website.';
+let permalink = 'https://astro-netlify-cms.netlify.app/login';
 ---
 <html lang="en">
   <head>
     <BaseHead title={title} description={description} permalink={permalink} />
     <link rel="stylesheet" href="/blog.css" />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+    ></script>
 
     <style>
       body {
@@ -74,15 +58,14 @@ allPosts = allPosts.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(
   </head>
 
   <body>
-    <BlogHeader />
     <div class="layout">
       <main class="content">
         <section class="intro">
           <h1 class="latest">{title}</h1>
           <p>{description}</p>
         </section>
-        <section aria-label="Blog post list">
-          {allPosts.map(p => <BlogPostPreview post={p} />)}
+        <section>
+          <div data-netlify-identity-button></div>
         </section>
       </main>
     </div>
